# pkg/handler/handler.go
@@ -3,10 +3,8 @@ package handler
 import (
 	"time"
 
-	"github.com/Marityr/gopitman/pkg/logging"
 	"github.com/Marityr/gopitman/pkg/service"
 	"github.com/gin-contrib/cors"
-	"github.com/gin-contrib/logger"
 	"github.com/gin-gonic/gin"
 
 	swaggerFiles "github.com/swaggo/files"
@@ -15,7 +13,7 @@ import (
 
 type Handler struct {
 	services *service.Service
-	logging  *logging.Logger
+	// logging  *logging.Logger
 }
 
 func NewHandler(services *service.Service) *Handler {
@@ -23,11 +21,11 @@ func NewHandler(services *service.Service) *Handler {
 }
 
 func (h *Handler) InitRoutes() *gin.Engine {
-	router := gin.New()
+	router := gin.Default()
 
 	router.Use(cors.New(cors.Config{
 		AllowOrigins:     []string{"https://foo.com"},
-		AllowMethods:     []string{"PUT", "PATCH"},
+		AllowMethods:     []string{"PUT", "PATCH", "POST", "DELETE", "OPTIONS"},
 		AllowHeaders:     []string{"Origin"},
 		ExposeHeaders:    []string{"Content-Length"},
 		AllowCredentials: true,
@@ -37,7 +35,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		MaxAge: 12 * time.Hour,
 	}))
 
-	router.Use(logger.SetLogger())
+	// router.Use(logger.SetLogger())
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -47,7 +45,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		auth.POST("/sign-in", h.signIn)
 	}
 
-	api := router.Group("/api/v1", h.userIdentity)
+	api := router.Group("/api/v1") //h.userIdentity
 	{
 		customer := api.Group("/customer")
 		{
@@ -56,7 +54,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 
 			customer.GET("/:id", h.getCustomerById)
 			customer.PUT("/:id", h.updateCustomer)
-			customer.DELETE("/:id", h.deleteCustomer)
+			customer.DELETE("/:id", h.deleteCustomer, h.userIdentity)
 
 		}
 	}
